# toydb

./: Cargo.toml  README.md
js_client/: README.md  index.js  package.json
rs_client/: Cargo.toml
rs_client/src/: README.md  lib.rs  main.rs
server/: Cargo.toml
server/src/: grammar.pest  main.rs
server/src/file_manager/: doc_implementation.rs  errors.rs  index_implementation.rs  manager.rs  mod.rs
server/src/query_parser/: errors.rs  grammar.rs  mod.rs  parser.rs
